2008-12-11  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/include/freeipmi/record-format/ipmi-sdr-record-format.h:
	Add record type names.  Rename several macros for consistency to
	IPMI spec.

	* ipmi-sensors/: Output record type names along with hex codes.
	
	* libfreeipmi/, common/src/toolcommon/, ipmi-sensors/, ipmi-sel/,
	ipmi-sensors-config/, ipmimonitoring/: Update macros as necessary.
	
2008-12-09  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/src/api/ipmi-lan-session-common.c
	(ipmi_lan_2_0_open_session): Fix Intel 2.0 workarounds.

	* bmc-config/src/bmc-config-user-sections.c (enable_user_commit):
	Fix workaround for enabling a user.

	* libfreeipmi/src/api/ipmi-lan-session-common.c
	(_ipmi_lan_2_0_cmd_wrapper_verify_packet): Fix ipmi 2.0 error
	handling corner case for some motherboards.

	* libfreeipmi/src/api/ipmi-lan-session-common.c
	(ipmi_lan_2_0_open_session): Fix ipmi Intel 2.0 workaround.
	
2008-12-09  Albert Chu <chu11@llnl.gov>

	* ipmi-oem/: Add supermicro reset-intrusion oem command.  Add
	--list option support.
	
2008-12-09  Albert Chu <chu11@llnl.gov>

	* ipmiconsole/src/libipmiconsole/ipmiconsole_ctx.c,
	ipmiconsole/src/libipmiconsole/ipmiconsole_defs.h,
	ipmiconsole/src/libipmiconsole/ipmiconsole_processing.c
	(_process_protocol_state_activate_payload): Add workaround for
	state machine cycle possibility.
	
2008-12-08  Albert Chu <chu11@llnl.gov>

	* ipmiconsole/src/libipmiconsole/ipmiconsole_packet.c
	(ipmiconsole_ipmi_packet_assemble): Add workaround for Intel IPMI
	2.0 situation.

	* common/man/manpage-common-workaround-sol-only-text.man,
	common/man/manpage-common-workaround-text.man: Change text for
	workaround changes.
	
2008-12-05  Albert Chu <chu11@llnl.gov>

	* ipmiconsole/src/libipmiconsole/ipmiconsole_packet.c
	(ipmiconsole_ipmi_packet_assemble): Fix Intel 2.0 workaround.
	
2008-12-04  Albert Chu <chu11@llnl.gov>

	* common/man/manpage-common-workaround-sol-only-text.man,